<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pattern"
    tools:context="com.omar.thirdtask.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="119dp"
        android:src="@drawable/logo_loginscreen"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textColor="#000"
        android:textSize="45sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Please_details"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="4dp"
        android:textColor="@color/black"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Your_name"
        android:id="@+id/editTextUsername"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="35dp"
        android:autofillHints="username"
        android:inputType="text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Your_Password"
        android:id="@+id/editTextPassword"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="35dp"
        android:inputType="textPassword"
        android:autofillHints="password"/>

    <Button
        android:layout_width="348dp"
        android:layout_height="72dp"
        android:id="@+id/buttonLogIn"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/black"
        android:text="@string/Log_In"
        android:textColor="@color/white"
        android:textSize="30sp"/>
</LinearLayout>
